--- a/style.css
+++ b/style.css
@@ -1,117 +1,97 @@
-* {
-    box-sizing: border-box;
-}
 html{
     width: 100%;
 }
 body {
-	background: #f1f1f1;
+	background: #B1A296;
 	margin: 0px;
 	border: 0px;
 }
 
 .topnav {
-	background-color: #16A5C7;
+	background-color: #116466;
     overflow: hidden;
-	opacity: .8;
+	opacity: 9;
     width: 100%;
+    text-align: center;
+    height: 50px;
+    top: 20px;
+    margin-top: auto;
+     list-style-type: none;
+     
 }
 
 .topnav a {
-	float: left;
-    color: #FFFFFF;
-    text-align: left;
-    padding: 14px 16px;
+    color: ghostwhite;
+    padding: 10px 16px;
     text-decoration: none;
-    font-size: 20px;
-    font-family: 'Montserrat', sans-serif;
-	
+    font-size: 2.2em;
+    font-family:fantasy;
+   
+}
+.topnav a li{
+     list-style-type: none;
+  
+   
 }
 
 .topnav a:hover {
-    background-color: #696969;
-    color: black;
+    background-color: #116466;
+    color: #05386B;
 	-webkit-transform: scale(1.3);
     -ms-transform: scale(1.3);
     transform: scale(1.3);
 }
 
+.current:visited {
+    color:#05386B;
+}
 header{
 	padding:5px;
-	background: white;
+	background: #B1A296;
     
 }
 
 #banner{
     width: 100%;
-    
-    
-    
-}
-    
-    
-}
-@keyframes typing {
-    from { width: 0 }
-    to { width: 75% }
 }
 
-
-@keyframes blink-caret {
-    from, to { border-color: transparent }
-    30% { border-color: white }
-}
-
-.leftcolumn {
-	float: left;
-	width: 20%;
+.leftcolumn{
+    float: left;
+    padding:1px;
+	width: 250px;
 	height: 666px;
-	background: #1A8DA9	;
-	padding: 0px;
-
+	background: #116466;;
+     border: 1px solid #557A95;
+    margin-top: 6px;
 }
-.leftcolumn a {
-	text-decoration: none;
-	font-family: 'Oswald', sans-serif;
+.leftcolumn a{
+	text-decoration:none;
+	color: white;
+	padding:0px;
 	padding-right: 100px;
-	color: black;
-	padding: 10px;
-    grid-template-rows: auto;
+    font-family: 'Oswald', sans-serif;
 }
-
 ul{
 	list-style-type: none;
 	font-size: 16px;
 	padding: 0px;
 	
 }
-
 ul li{
-	border-bottom:1px solid #236D7F;
-	display:block;
-	padding: 15px;
 	list-style-type:none;
-	
+	display:block;
+	padding:15px;
+	border-bottom: 1px solid #236D7F
 }
-ul li :hover{
-	background: #FFFFFF;
-	transition: linear all 0.30s;
-	margin-left:5px;
-    grid-row: auto;
+div ul li:hover{
+	background: #4097AD;
+	transition: linear  all 0.30s;
+	margin-left:10px;
 }
-ul li a:hover{
-	color:black;
+div ul li a:hover{
+	color:white;
 }
 
-ul li ul li{
-	display: none;
-    float: right;
-    right: 20px;
-}
-ul li:hover  ul li {
-	display: inline-block;
-	
-}
 .rightcolumn {
     float: left;
     width: 80%;
@@ -120,12 +100,7 @@ ul li:hover  ul li {
     padding-left: 20px;	
 }
 
-.selected{
-	background:white;
-}
-.selected a{
-	color:black;
-}
+
 
 
 .container {
@@ -148,6 +123,56 @@ ul li:hover  ul li {
      margin-top: 15px;
 	 
 }
+#Container {
+    background-color: aqua;
+    opacity: 0.1;
+    filter: alpha(opacity=60);
+    text-align: center;
+    margin-left: 270px;
+    margin-top: 9px;
+    margin-right: 10px;
+    height: auto;
+   
+}
+.title {
+    text-align: center;
+    top: 45%;
+    left: 50%;
+    position: absolute;
+    max-width: 100%;
+    margin: 0 auto;
+}
+.paragraph p{
+    position: absolute;
+    top: 40%;
+    left: 10%;
+    color: black;
+    opacity: 2px;
+    padding: 100px;
+    font-size: 2em;
+    text-align: left;
+}
+#gif{
+    width: 100%;
+    height: 1000px;
+    opacity: 0.9;
+    
+   
+
+}
+    
+}
+#footer {
+  position: absolute;
+  right: 0;
+  
+  top: 150%;
+  left: 0;
+  padding: 5rem;
+  background-color: #116466;
+  text-align: center;
+}
+
 
 
 
